update doc, work on quizzes and checkouts
